# opencv-cpp

./: .gitignore  ImageProcessingApp.sln
ImageProcessingApp/: .gitignore  CMakeLists.txt  ImageProcessingApp.cpp  ImageProcessingApp.vcxproj  ImageProcessingApp.vcxproj.filters
